Fix hard to read tooltip

--- a/Orchidea/files/Orchidea/cinnamon/cinnamon.css
+++ b/Orchidea/files/Orchidea/cinnamon/cinnamon.css
@@ -89,7 +89,8 @@ StScrollBar StButton#vhandle:active {
 
 #Tooltip {
   padding: 2px 12px;
-  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  background-color: #3c3c3c;
   color: rgba(255, 255, 255, 0.5);
   font-weight: normal;
   text-align: center;
